<resources>
    <string name="app_name">MOVE4WELLNESS</string>
    <string name="move4wellness">MOVE<font color="#9B6FF1">4</font>WELLNESS</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an Account</string>
    <string name="hey_there">Hey there,</string>
    <string name="full_name">Full Name</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="phone_number_optional">Phone Number (Optional)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username_email_phoneNumber">Username/Email/Phone-Number</string>
    <string name="Welcome_Back">Welcome Back!</string>
    <string name="HELLO_TEXT">Hello,</string>
    <string name="manager_s_edition">Manager\'s Edition</string>
    <string name="this_week_s_total">This Week\'s Total:</string>
    <string name="this_week_s_average">This week\'s average:</string>
    <string name="all_time_total">Total Duration of Activities:</string>
    <string name="all_time_average">Average Duration of Activities:</string>
    <string name="total_users">Total Users:</string>
    <string name="search_user">Search User</string>
    <string name="all_users">See All Users</string>
    <string name="send_global">Send Global Message</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="user">User</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="user_s">User\'s</string>
    <string name="total_number_of_activities">Total Number of Activities:</string>
    <string name="average_number_of_activities">Average Number of Activities:</string>
    <string name="dash">0</string>
    <string name="dash2">0</string>
    <string name="dash3">0</string>
    <string name="dash5">0</string>
    <string name="dash6">0</string>
    <string name="awaiting">AWAITING</string>
    <string name="send_global_message">Send Global Message</string>
    <string name="type_message_here">Type Message Here</string>
    <string name="ready_to_send">Ready to Send</string>
    <string name="skip">skip</string>
    <string name="name_duration"><![CDATA[Name&Duration]]></string>
    <string name="date">date</string>
    <string name="notifications">Notifications</string>
    <string name="global_message">Global Message</string>
</resources>
