<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top instructions text -->

    <TextView
        android:id="@+id/HELLO_TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/HELLO_TEXT"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/WELCOME_BACK_TEXT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Adding editTextViews for full name, email, phone number, and password -->

    <!-- User can use userName, phoneNumber, or Email to log in -->
    <TextView
        android:id="@+id/WELCOME_BACK_TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/Welcome_Back"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/login_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HEY_THERE_TEXT" />

    <EditText
        android:id="@+id/login_name"
        android:layout_width="208dp"
        android:layout_height="56dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="103dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:inputType="text"
        android:text=""
        android:hint="@string/username_email_phoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WELCOME_BACK_TEXT"/>

    <EditText
        android:id="@+id/Login_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_name"
        tools:text="" />

    <!-- Adding finish button that redirects user -->

    <!-- Adding picture -->

    <Button
        android:id="@+id/Register_Register"
        android:layout_width="299dp"
        android:layout_height="61dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#AC61F6"
        android:onClick="onClickHomepage"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Password"
        app:layout_constraintVertical_bias="0.958" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="244dp"
        android:layout_height="448dp"
        android:layout_marginEnd="84dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/login_register_girl"
        tools:layout_editor_absoluteY="219dp" />

</androidx.constraintlayout.widget.ConstraintLayout>